fix: chart shrinking on Safari Browsers

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
     padding: 1em;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);    max-width: 90vw;
-    max-height: 50vh;
+    height: 100vh;
     overflow-y: scroll;
     background: -webkit-linear-gradient(#d2d6fd, #FFFFFF);
     margin: auto;
@@ -131,4 +131,8 @@ input[type=date]:focus {
 
 .positive-value {
   color: green;
+}
+.chart-inner-container{
+  width: 100vw;
+  height: 100vh;
 }
